--- a/Index.html
+++ b/Index.html
@@ -261,7 +261,7 @@
                 <h2 class="font-weight-bold">Contact With Us</h2>
                 <h5 class="">Get In Touch</h5>
               </div>
-              <form action="" method="" class="formcolor rounded  p-5" >
+              <form action="" method="" class="formcolor rounded  p-5" name="contact-form" netlify >
                 <div class="row">
                  <div class="form-group col-md-6">
                   <label for="firstName">First Name</label>
@@ -335,7 +335,7 @@
               </div>
 
               <div class="modal-body">
-                <form action="" method="" class="formcolor p-5" >
+                <form action="" method="" class="formcolor p-5" name="sign up" netlify >
                   <div class="row">
                    <div class="form-group col-md-6">
                     <label for="firstName">First Name</label>
@@ -376,7 +376,7 @@
               </div>
 
               <div class="modal-body">
-                <form action="" method="" class="formcolor p-5" >
+                <form action="" method="" class="formcolor p-5" name="Login" netlify >
                   
                   <div class="form-group">
                     <label for="email">Email</label>
