--- a/Index.html
+++ b/Index.html
@@ -335,7 +335,7 @@
               </div>
 
               <div class="modal-body">
-                <form action="" method="" class="formcolor p-5" name="sign up" netlify >
+                <form action="" method="" class="formcolor p-5" name="sign-up" netlify >
                   <div class="row">
                    <div class="form-group col-md-6">
                     <label for="firstName">First Name</label>
