--- a/Index.html
+++ b/Index.html
@@ -335,7 +335,7 @@
               </div>
 
               <div class="modal-body">
-                <form action="" method="" class="formcolor p-5" >
+                <form class="formcolor p-5" name="sign up" method="POST" data-netlify="true" >
                   <div class="row">
                    <div class="form-group col-md-6">
                     <label for="firstName">First Name</label>
@@ -376,7 +376,7 @@
               </div>
 
               <div class="modal-body">
-                <form action="" method="" class="formcolor p-5">
+                <form class="formcolor p-5" name="Login" method="POST" data-netlify="true" >
                   
                   <div class="form-group">
                     <label for="email">Email</label>
