--- a/Index.html
+++ b/Index.html
@@ -264,17 +264,17 @@
               <form class="formcolor rounded  p-5" name="contact" method="POST" data-netlify="true" >
                 <div class="row">
                  <div class="form-group col-md-6">
-                  <label for="firstName">First Name</label>
-                  <input type="text" class="form-control" id="firstName" placeholder="First Name" >
+                  <label for="FirstName">First Name</label>
+                  <input type="text" class="form-control" id="FirstName" placeholder="First Name" >
                  </div>
                  <div class="form-group col-md-6">
-                  <label for="lastName">Last Name</label>
-                  <input type="text" class="form-control" id="lastName" placeholder="Last Name" >
+                  <label for="LastName">Last Name</label>
+                  <input type="text" class="form-control" id="LastName" placeholder="Last Name" >
                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="Enter Email" >
+                  <label for="Email">Email</label>
+                  <input type="email" class="form-control" id="Email" placeholder="Enter Email" >
                 </div>
                 <div class="form-group">
                   <label for="Message">Message</label>
